Fix spacing on slider

--- a/a-maze.js/src/index.css
+++ b/a-maze.js/src/index.css
@@ -15,6 +15,7 @@
 
 .Controls-slider {
   margin-left: 1rem;
+  margin-right: 1rem;
 }
 
 .Maze {
